--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,8 +12,29 @@
     display: flex;
     h1 {
         color: white;
-        margin: auto auto;
+        margin: -0.5rem auto 0;
+        font-family: 'Aref Ruqaa Ink', serif;
+        font-weight: bold;
+        font-size: var(--header);
     }
+}
+
+h1 {
+    font-family: 'Lobster Two', cursive;
+    font-size: var(--title);
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+    font-size: var(--body-text);
+}
+
+.txt-foto {
+    color: white;
+}
+
+.title {
+    color: #ffc402;
 }
 
 main {
@@ -34,7 +55,7 @@ main {
     box-shadow: $box-shadow-black;
     background: transparent;
     .container-txt {
-        background-color: rgb(224, 224, 224);
+        background-color: rgb(255 149 149);
         border-radius: 5px;
         padding: 1rem;
         text-align: justify;
