--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aref+Ruqaa+Ink:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 :root {
     /*font size for html = fontsize 62.5%*/
     --smallest: 1.2rem;
@@ -14,7 +14,6 @@
     /*up to 2.8*/
     --header: 3.2rem;
     /*up to 1.8*/
-    --temperature: 5rem;
 }
 
 @media (min-width: 768px) {
@@ -30,6 +29,5 @@
         /*up to 3.8*/
         --header: 4rem;
         /*up to 4.8*/
-        --temperature: 5.8rem;
     }
 }
