--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -3,3 +3,8 @@ $box-shadow-black-complete: 0px 0px 25px rgba(0, 0, 0, 0.473);
 $rosa-palo: #C77C7C;
 // $blue-gradient: linear-gradient(to bottom right, #0b404d, #298ea6);
 $blue-gradient: linear-gradient(to bottom right, #075f5b, #208d84);
+//modo hot
+$rojoIntenso: #97140C;
+$divider: #F45854;
+$bodyBackground: #D4150A;
+$fontColor: #2FA4DA;
